<resources>

   <!-- General -->
   <string name="action_settings">Settings</string>
   <string name="add">Add</string>
   <string name="app_name">OU</string>
   <string name="cancel">Cancel</string>
   <string name="delete">Delete</string>
   <string name="done">Done</string>
   <string name="edit">Edit</string>
   <string name="ok">Ok</string>
   <string name="save">Save</string>
   <string name="search">Search</string>
   <string name="share">Share</string>
   <string name="toast_save_failure">Save failed!</string>
   <string name="toast_save_success">Saved successfully.</string>

   <!-- Main Activity -->
   <string name="main_trip_add">New Trip!</string>
   <string name="main_trip_list">My Trips</string>
   <string name="main_one_liner">Share trip expenses, track who owes whom.</string>
   <string name="main_permissions_grant_success">Granted permissions</string>
   <string name="main_permissions_grant_error">Sorry, the app cannot function without permissions</string>

   <!-- Deletion of list item -->
   <string name="list_item_del">%1$d %2$s deleted</string>
   <string name="list_item_del_none">No %1$s to delete</string>

   <!-- Trip -->
   <string name="trip_title_list">Trips</string>
   <string name="trip_title_detail">Trip Details</string>
   <string name="trip_title_add">Add Trip</string>
   <string name="trip_title_edit">Edit Trip</string>

   <string name="trip_hint_summary">Where are we going?</string>
   <string name="trip_hint_details">Tell me more about it...</string>

   <string name="trip_validation_name">You got to say something</string>

   <string name="trip_items">Items Purchased</string>
   <string name="trip_users">Trip Members</string>
   <string name="trip_groups">Trip Groups</string>
   <string name="trip_wow">Who Owes Whom</string>
   <string name="trip_expenses">Trip Expenses</string>


   <!-- User -->
   <string name="user_title_list">Members</string>
   <string name="user_title_edit">Edit Member</string>
   <string name="user_title_detail">Member Details</string>

   <string name="user_view_contact">View contact</string>
   <string name="user_relink_contact">Relink contact</string>
   <string name="user_validation_name">Please fill user name</string>

   <string name="user_del_constraint">Delete aborted! Please remove users from items they have paid for or share.</string>

   <!-- Group -->
   <string name="group_title_list">Groups</string>
   <string name="group_title_detail">Group Details</string>
   <string name="group_title_add">Add Group</string>
   <string name="group_title_edit">Edit Group</string>

   <string name="group_validation_name">Please fill group name</string>
   <string name="group_validation_group_of_all">Cannot remove default group "All"</string>

   <string name="group_members">Members</string>
   <string name="group_name">Group Name</string>
   <string name="group_detail">Group Details</string>

   <!-- Item -->
   <string name="item_title_list">Items</string>
   <string name="item_title_detail">Item Details</string>
   <string name="item_title_add">Add Item</string>
   <string name="item_title_edit">Edit Item</string>

   <string name="item_validation_summary">Please fill item summary</string>
   <string name="item_validation_paid_by_amount">Please fill amount more than zero</string>
   <string name="item_validation_paid_by_count">At least one entry is required</string>
   <string name="item_validation_shared_by">At least one user must share the item</string>

   <string name="item_summary">Item Summary</string>
   <string name="item_detail">Item Details</string>
   <string name="item_paid_by">Paid By</string>
   <string name="item_shared_by">Shared By</string>
   <string name="item_shared_by_groups">Shared By Groups</string>
   <string name="item_shared_by_users">Shared By Users</string>

   <!-- Segment: Paid By-->
   <string name="segment_payment_delete_description">Delete row</string>

   <!-- Dialog: Shared By  -->
   <string name="shared_by_title">Shared By</string>

   <!-- User -->
   <string name="user_nick_name">Nick Name *</string>
   <string name="user_full_name">Full Name</string>

   <!-- Contacts -->
   <string name="contact_title_add">Add from contacts (%1$d)</string>
   <string name="contact_validation_count">At least one contact is required</string>
   <string name="contact_add">Added %1$d new contacts</string>

   <!-- Trip Expenses -->
   <string name="trip_expenses_title">Trip Expenses</string>
   <string name="trip_expense_before">You spent</string>
   <string name="trip_expense_after">Your trip expense</string>

   <!-- Who Owes Whom -->
   <string name="wow_title">Who Owes Whom</string>
   <string name="wow_lenders_title">Lenders</string>
   <string name="wow_borrowers_title">Borrowers</string>
   <string name="wow_lenders_detail">List of lenders and the amount they have to get. Click on each lender to see who owes them.</string>
   <string name="wow_borrowers_detail">List of borrowers and the amount they have to pay. Click on each borrower to see who they owe.</string>
   <string name="wow_switch_to_lenders_list">Switch to lenders list</string>
   <string name="wow_switch_to_borrowers_list">Switch to borrowers list</string>
   <string name="wow_error_report_gen">Error saving report file</string>

   <!-- Trip Report -->
   <string name="report_basic_show">View Basic Report</string>
   <string name="report_basic_share">Share Basic Report</string>
   <string name="report_detail_show">View Detail Report</string>
   <string name="report_detail_share">Share Detail Report</string>
   <string name="report_details">The basic PDF report has who owes whom (WOW) and trip expenses per user. The detailed HTML report has calculations per item purchased.</string>
   <string name="report_share">Share report with members</string>

   <!-- Help -->
   <string name="help_shared_by">All members of the trip group share the item\'s cost, by default.</string>
   <string name="help_contact_with_id">Contact Id = %s</string>
   <string name="help_group_members">Add or remove members from the group</string>

   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
