<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.maga.ou.UserDetailFragment"
   android:id="@+id/fragment_group_detail"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/bgLightPrimary"
   android:orientation="vertical">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:orientation="vertical">

         <EditText
            android:id="@+id/group_add_edit__name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:hint="@string/group_name"
            style="@style/OU.Dark_Title1"
            />

         <EditText
            android:id="@+id/group_add_edit__detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_detail"
            android:minLines="1"
            android:maxLines="2"
            style="@style/OU.Dark_Detail1"
            />

         <Button
            android:id="@+id/group_add_edit__members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:drawableTop="@drawable/thumb_users"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:text="@string/group_members"
            style="@style/OU.Button.Purple"/>

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_group_members"
            android:gravity="center"
            style="@style/OU.TextStyle.Help"/>

      </LinearLayout>

   </ScrollView>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      android:weightSum="2">

      <Button
         android:id="@+id/group_add_edit__cancel"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/cancel"
         android:drawableStart="@drawable/ic_clear_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Negative"
         />

      <Button
         android:id="@+id/group_add_edit__save"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/save"
         android:drawableStart="@drawable/ic_done_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Positive"
         />

   </LinearLayout>

</LinearLayout>