<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context=".UserEditFragment"
   android:id="@+id/fragment_user_add_edit"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/bgLightPrimary"
   android:orientation="vertical">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:orientation="vertical">

         <EditText
            android:id="@+id/user_edit__nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_nick_name"
            android:maxLength="10"
            style="@style/OU.Dark_Title1"
            />

         <EditText
            android:id="@+id/user_edit__full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_full_name"
            style="@style/OU.Dark_Title2"
            />

         <Button
            android:id="@+id/user_edit__relink_contact"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Green"
            android:text="@string/user_relink_contact"
            android:drawableLeft="@drawable/thumb_contact_view"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />

         <TextView
            android:id="@+id/user_detail__contact_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_contact_with_id"
            android:gravity="center"
            style="@style/OU.TextStyle.Help"/>

      </LinearLayout>

   </ScrollView>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      android:weightSum="2">

      <Button
         android:id="@+id/user_edit__cancel"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/cancel"
         android:drawableStart="@drawable/ic_clear_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Negative"
         />

      <Button
         android:id="@+id/user_edit__save"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/save"
         android:drawableStart="@drawable/ic_done_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Positive"
         />

   </LinearLayout>


</LinearLayout>