<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.maga.ou.UserAddEditFragment"
   android:id="@+id/fragment_trip_add_edit"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/bgLightPrimary"
   android:orientation="vertical">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         android:layout_gravity="center">

         <EditText
            android:id="@+id/trip_add_edit__summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_hint_summary"
            android:maxLength="20"
            style="@style/OU.Trip_Title"
            android:gravity="center"
            />

         <EditText
            android:id="@+id/trip_add_edit__detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_hint_details"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="3"
            style="@style/OU.Trip_Detail"
            android:gravity="center"
            />

      </LinearLayout>
      
   </ScrollView>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      android:weightSum="2">

      <Button
         android:id="@+id/trip_add_edit__cancel"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/cancel"
         android:drawableStart="@drawable/clear_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Negative"
         />

      <Button
         android:id="@+id/trip_add_edit__save"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/save"
         android:drawableStart="@drawable/done_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Positive"
         />

   </LinearLayout>
   

</LinearLayout>