<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.maga.ou.ItemPaymentDetailFragment"
   android:id="@+id/fragment_item_payment_detail"
   android:layout_width="wrap_content"
   android:layout_height="match_parent"
   android:background="@color/bgLightPrimary">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_weight="1"
      android:fillViewport="true">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         >

         <TextView
            android:id="@+id/trip_detail__name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OU.Dark_Title1"
            android:text="Coorg Trip"/>

         <View style="@style/OU.Separator.Title"/>

         <TextView
            android:id="@+id/trip_detail__detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OU.Dark_Detail1"
            android:text="A road trip to the chilling fresh coffee aroma of the kodagu."/>

         <Button
            android:id="@+id/trip_detail__users"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Green"
            android:text="@string/trip_users"
            android:drawableLeft="@drawable/thumb_users"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />

         <Button
            android:id="@+id/trip_detail__groups"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Blue"
            android:text="@string/trip_groups"
            android:drawableLeft="@drawable/thumb_group"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />


         <Button
            android:id="@+id/trip_detail__items"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Green"
            android:text="@string/trip_items"
            android:drawableLeft="@drawable/thumb_items"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />

         <Button
            android:id="@+id/trip_detail__expenses"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Blue"
            android:text="@string/trip_expenses"
            android:drawableLeft="@drawable/thumb_expense"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />

         <Button
            android:id="@+id/trip_detail__wow"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Purple"
            android:text="@string/trip_wow"
            android:drawableLeft="@drawable/thumb_balance"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />

      </LinearLayout>

   </ScrollView>

</LinearLayout>