<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context=".ItemPaymentAddEditFragment"
   android:id="@+id/fragment_trip_report"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:background="@color/bgLightPrimary">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:layout_weight="1"
      android:fillViewport="true">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin">

         <TextView
            android:id="@+id/trip_report__summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OU.Dark_Title1"
            android:text="Coorg Trip Report"/>

         <View style="@style/OU.Separator.Title"/>

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OU.Dark_Detail1"
            android:text="@string/report_details"/>

         <Button
            android:id="@+id/trip_report__show"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            style="@style/OU.Button.Green"
            android:text="@string/report_show"
            android:drawableLeft="@drawable/thumb_users"
            android:paddingLeft="40dp"
            android:drawablePadding="-40dp"
            />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/OU.Heading"
            android:text="@string/report_share"/>

         <GridLayout
            android:id="@+id/trip_report__users_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:background="@color/borderLight">

            <!-- Layouts from segment_paid_by_add_add.xml have to be dynamically added here -->
            <!--
            <include layout="@layout/segment_report"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
                     android:layout_margin="1dp"/>

            <include layout="@layout/segment_report"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
                     android:layout_margin="1dp"/>

            <include layout="@layout/segment_report"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
                     android:layout_margin="1dp"/>
            -->
         </GridLayout>

      </LinearLayout>

   </ScrollView>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      android:weightSum="1">

      <Button
         android:id="@+id/trip_report__share"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/share"
         android:drawableStart="@drawable/ic_share_dark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         style="@style/OU.Button.Op.Positive"
         />

   </LinearLayout>

</LinearLayout>
